tests/NormalTests/paczka1/fuzzy1/24584199.err
Error in line 1: dYdW1vZiV S725 31,5
Error in line 2: dYdW1vZiV A739 99,8
Error in line 4: dYdW1vZiV S725 20,8
Error in line 15: m8CLZLWxhz A739 59,9
Error in line 19: Luo3HF S725 61,4
Error in line 18: m8CLZLWxhz S584 66,9
Error in line 14: ED03wNZ5 S584 220,4
Error in line 37: eXiwi S584 1,8
